--- a/Source Code/JobSearchingSystem/JobSearchingSystem/Views/Shared/_MessageSentPartial.cshtml
+++ b/Source Code/JobSearchingSystem/JobSearchingSystem/Views/Shared/_MessageSentPartial.cshtml
@@ -42,7 +42,7 @@
                             }
                             i++;
                         }
-                        <a href="/Message/Detail?id=@item.MessageID" class="list-group-item"><input type="checkbox" id="@item.MessageID" name="mark" value="@item.MessageID" /><span style="min-width: 200px; display: inline-block;" class="name">Tới: @receiverList</span>@*<span>Sed ut perspiciatis unde</span>*@&nbsp;  &nbsp;<span style="font-size: 11px;" class="text-muted">@noHTMLNormalised</span><span class="badge">@item.SendTime</span><span class="pull-right mrl"></span></a>
+                        <a href="/Message/Detail?id=@item.MessageID&&typeOfMessage=@Model.typeOfMessage" class="list-group-item"><input type="checkbox" id="@item.MessageID" name="mark" value="@item.MessageID" /><span style="min-width: 200px; display: inline-block;" class="name">Tới: @receiverList</span>@*<span>Sed ut perspiciatis unde</span>*@&nbsp;  &nbsp;<span style="font-size: 11px;" class="text-muted">@noHTMLNormalised</span><span class="badge">@item.SendTime</span><span class="pull-right mrl"></span></a>
                     }
                 }
                 @*@using (Html.BeginForm("DeleteMessage", "Message", FormMethod.Post, new { id = "deleteForm" }))
