--- a/Source Code/JobSearchingSystem/JobSearchingSystem/Views/Home/Index.cshtml
+++ b/Source Code/JobSearchingSystem/JobSearchingSystem/Views/Home/Index.cshtml
@@ -12,6 +12,14 @@
         width: 96% !important;
         margin-bottom:0px !important;
     }
+    .dropdownselect {
+        width: 40% !important;
+        /* display: inline; */
+        float: right;
+    }
+    .actions{
+        display:none!important;
+    }
 </style>
 
 <link type="text/css" rel="stylesheet" href="~/Content/vendors/bootstrap-progressbar/css/bootstrap-progressbar-3.1.1.min.css">
@@ -26,7 +34,7 @@
 <link rel="stylesheet" href="~/Content/css/gh-buttons.css" type="text/css" media="screen" charset="utf-8">
 <link rel="stylesheet" href="~/Content/css/style.css" type="text/css" media="screen" charset="utf-8">
 <link rel="stylesheet" href="~/Content/css/responsive.css" type="text/css" media="screen" charset="utf-8">
-
+<link rel="stylesheet" href="~/Content/css/easydropdown.css" type="text/css" media="screen" charset="utf-8">
 
 <script type="text/javascript" src="~/Content/js/jquery-easing-1.3.0.js"></script>
 <script type="text/javascript" src="~/Content/js/modernizr.mediaqueries.transforms3d.js"></script>
@@ -45,6 +53,9 @@
 
 <script src="~/Content/vendors/bootstrap-progressbar/bootstrap-progressbar.min.js"></script>
 <script src="~/Content/js/ui-progressbars.js"></script>
+
+<script src="~/Content/js/jquery.easydropdown.js" type="text/javascript"></script>
+
 
 @*<script type="text/javascript" src="~/Content/js/jquery.js"></script>*@
 <script type="text/javascript" src="~/Content/js/jquery-ui.min.js"></script>
@@ -314,6 +325,8 @@
     
         <div>
             <img u="image" src="~/Content/img/all-job.png" />
+
+
             <div style="position: absolute; width: 1000px; height: 200px; top: 250px; left: 200px; padding: 5px;">
                 <div class="col-lg-9">
 
@@ -357,7 +370,7 @@
                                                     {
                                                         for (int i = 1; i <= Model.schoolLevelList.Count(); i++)
                                                         {
-                                                           
+                                                            <option value="0">Bằng cấp</option>
                                                             foreach (var item in Model.schoolLevelList)
                                                             {
 
@@ -410,7 +423,9 @@
             </div>
 
         </div>
-    </div>
+        
+
+</div>
 
     <!--#region Bullet Navigator Skin Begin -->
     <!-- Help: http://www.jssor.com/development/slider-with-bullet-navigator-jquery.html -->
@@ -535,9 +550,9 @@
 
     <!-- Slides Container -->
     <div u="slides" style="cursor: move; position: absolute; left: 0px; top: 0px; width: 2000px; height: 100px; overflow: hidden;">
-        @if (Model.purchaseAdvertiseTypeA != null)
+        @if (Model.purchaseAdvertiseTypeB != null)
         {
-            foreach (var item in Model.purchaseAdvertiseTypeA)
+            foreach (var item in Model.purchaseAdvertiseTypeB)
             {
                 <div style="border: 1px solid #ccc; padding-right:10px"><a href="/Job/JobsOfRecruiter?recruiterID=@item.RecuiterID"><img u="image" src="@item.LogoUrl" /></a></div>
 
@@ -601,12 +616,13 @@
 
             <div class="panel panel-red">
 
-                <div class="panel-heading">Việc làm
+                <div class="panel-heading" style=" font-size: x-large; padding-bottom: 3%;">Việc làm
                 
-                    <select id="sortJob" style="margin-left: 50%; color: peru">
-                        <i class="fa fa-tint"></i>
+                    <select id="sortJob" class="dropdown">
+
+
                         <option value="new" selected>Mới nhất</option>
-                        <option value="view" >Lượt xem nhiều nhất</option>
+                        <option value="view">Lượt xem nhiều nhất</option>
 
                     </select>
                   
@@ -629,13 +645,13 @@
         <div class="col-md-4">
 
             <div class="panel panel-blue">
-                <div class="panel-heading" style="font-size:small">Nhà tuyển dụng hàng đầu</div>
+                <div class="panel-heading" style="font-size: 21px; padding-bottom: 10%; ">Nhà tuyển dụng hàng đầu</div>
                 <div class="panel-body">
                     <div id="container" style="overflow-y:scroll;height:500px">
                         <ul class="list-group" id="myList2" style="margin-left: 2%;">
-                            @if (Model.purchaseAdvertiseTypeB != null)
+                            @if (Model.purchaseAdvertiseTypeA != null)
                             {
-                                foreach (var item in Model.purchaseAdvertiseTypeB)
+                                foreach (var item in Model.purchaseAdvertiseTypeA)
                                 {
                                     <li class="">
                                         <a href="/Job/JobsOfRecruiter?recruiterID=@item.RecuiterID"> <img class="salesLogoImage img-responsive" src="@item.LogoUrl" width="70" height="43" border="0"></a>
@@ -724,97 +740,191 @@
 
         <div class="view-port">
             <div id="example-3" class="slider-container huge">
-                <div class="item cover cover-2">
-                    <div class="side-a">
-                        <img src="http://ib3.huluim.com/show/70?size=476x268">
-                        <div class="img-area">
+
+                @{
+                    int length = Model.topicList.Count();
+
+                    if (length > 0)
+                    {
+                        <div class="item cover cover-2">
+                <div class="side-a">                   
+                    <a href="/Topic/Detail/@Model.topicList.ElementAt(0).TopicID"><img src="@Model.topicList.ElementAt(0).ImageUrl" title="@Model.topicList.ElementAt(0).Title" style="height: 272px; width: 462px; "></a>
+                    <div class="img-area">
+                        @if (length > 1) { 
                             <div class="img-block">
-                                <img src="http://ib1.huluim.com/show/1968?size=220x124">
-                            </div>
-                            <div class="img-block">
-                                <img src="http://ib1.huluim.com/show/2252?size=220x124">
-                            </div>
+                            <a href="/Topic/Detail/@Model.topicList.ElementAt(1).TopicID"><img src="@Model.topicList.ElementAt(1).ImageUrl" title="@Model.topicList.ElementAt(1).Title" style="height: 128px; width: 222px; "></a>
                         </div>
-                    </div>
-                    <div class="side-b">
-                        <img src="http://ib4.huluim.com/show/2103?size=476x268">
-                        <div class="img-area">
-                            <div class="img-block">
-                                <img src="http://ib3.huluim.com/show/902?size=220x124">
-                            </div>
-                            <div class="img-block">
-                                <img src="http://ib3.huluim.com/show/54?size=220x124">
-                            </div>
+                        }
+
+                        @if (length > 2) {
+                        <div class="img-block">
+                            <a href="/Topic/Detail/@Model.topicList.ElementAt(2).TopicID"><img src="@Model.topicList.ElementAt(2).ImageUrl" title="@Model.topicList.ElementAt(2).Title" style="height: 128px; width: 222px; "></a>
                         </div>
+                        }
                     </div>
                 </div>
-                <div class="item">
-                    <div class="img-block">
-                        <img src="http://ib2.huluim.com/show/9673?size=220x124">
-                    </div>
-                    <div class="img-block">
-                        <img src="http://ib3.huluim.com/show/8290?size=220x124">
-                    </div>
-                    <div class="img-block">
-                        <img src="http://ib4.huluim.com/show/903?size=220x124">
-                    </div>
-                </div>
-                <div class="item">
-                    <div class="img-block">
-                        <img src="http://ib2.huluim.com/show/7529?size=220x124">
-                    </div>
-                    <div class="img-block">
-                        <img src="http://ib1.huluim.com/show/44?size=220x124">
-                    </div>
-                    <div class="img-block">
-                        <img src="http://ib1.huluim.com/show/7528?size=220x124">
-                    </div>
-                </div>
-                <div class="item">
-                    <div class="img-block">
-                        <img src="http://ib2.huluim.com/show/389?size=220x124">
-                    </div>
-                    <div class="img-block">
-                        <img src="http://ib3.huluim.com/show/11226?size=220x124">
-                    </div>
-                    <div class="img-block">
-                        <img src="http://ib3.huluim.com/show/11430?size=220x124">
+                
+                 @if (length > 3)
+                 {
+                       <div class="side-b">
+                    <a href="/Topic/Detail/@Model.topicList.ElementAt(3).TopicID"><img src="@Model.topicList.ElementAt(3).ImageUrl" title="@Model.topicList.ElementAt(3).Title" style="height: 272px; width: 462px; "></a>
+                    <div class="img-area">
+                        @if (length > 4)
+                        {
+                            <div class="img-block">
+                                <a href="/Topic/Detail/@Model.topicList.ElementAt(4).TopicID"><img src="@Model.topicList.ElementAt(4).ImageUrl" title="@Model.topicList.ElementAt(4).Title" style="height: 128px; width: 222px; "></a>
+                            </div>
+                        }
+                 
+                        @if (length > 5)
+                        {
+                            <div class="img-block">
+                                <a href="/Topic/Detail/@Model.topicList.ElementAt(5).TopicID"><img src="@Model.topicList.ElementAt(5).ImageUrl" title="@Model.topicList.ElementAt(5).Title" style="height: 128px; width: 222px; "></a>
+                            </div>
+                        }
                     </div>
                 </div>
+                 }
+              
+            </div>
+                    }   
+            
+
+        }
+
+        @{
+            int m = 6;
+            while (m < Model.topicList.Count())
+            {
                 <div class="item">
-                    <div class="img-block">
-                        <img src="http://ib4.huluim.com/show/1603?size=220x124">
-                    </div>
-                    <div class="img-block">
-                        <img src="http://ib2.huluim.com/show/53?size=220x124">
-                    </div>
-                    <div class="img-block">
-                        <img src="http://ib1.huluim.com/show/11248?size=220x124">
-                    </div>
+                    @{
+                int z = 1;
+                foreach (var item in Model.topicList)
+                {
+                    if ((z % 3 == 0 && z > m)|| z == Model.topicList.Count())
+                    {
+                        <div class="img-block">
+                            <a href="/Topic/Detail/@item.TopicID"><img src="@item.ImageUrl" style="height: 128px; width: 222px; "></a>
+                        </div>
+                        m = z;
+                        break;
+                    }
+                    if (z > m)
+                    {
+                        <div class="img-block">
+                            <a href="/Topic/Detail/@item.TopicID"><img src="@item.ImageUrl" style="height: 128px; width: 222px; "></a>
+                        </div>
+
+                    }
+
+                    z++;
+                }
+                    }
                 </div>
-                <div class="item">
-                    <div class="img-block">
-                        <img src="http://ib2.huluim.com/show/2553?size=220x124">
-                    </div>
-                    <div class="img-block">
-                        <img src="http://ib4.huluim.com/show/7555?size=220x124">
-                    </div>
-                    <div class="img-block">
-                        <img src="http://ib4.huluim.com/show/11431?size=220x124">
-                    </div>
+
+
+            }
+        }
+
+
+
+        @*<div class="item cover cover-2">
+        <div class="side-a">
+            <img src="http://ib3.huluim.com/show/70?size=476x268">
+            <div class="img-area">
+                <div class="img-block">
+                    <img src="http://ib1.huluim.com/show/1968?size=220x124">
                 </div>
-                <div class="item">
-                    <div class="img-block">
-                        <img src="http://ib2.huluim.com/show/11253?size=220x124">
-                    </div>
-                    <div class="img-block">
-                        <img src="http://ib4.huluim.com/show/6979?size=220x124">
-                    </div>
-                    <div class="img-block">
-                        <img src="http://ib3.huluim.com/show/10?size=220x124">
-                    </div>
+                <div class="img-block">
+                    <img src="http://ib1.huluim.com/show/2252?size=220x124">
                 </div>
             </div>
+        </div>
+        <div class="side-b">
+            <img src="http://ib4.huluim.com/show/2103?size=476x268">
+            <div class="img-area">
+                <div class="img-block">
+                    <img src="http://ib3.huluim.com/show/902?size=220x124">
+                </div>
+                <div class="img-block">
+                    <img src="http://ib3.huluim.com/show/54?size=220x124">
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+    <div class="item">
+        <div class="img-block">
+            <img src="http://ib2.huluim.com/show/9673?size=220x124">
+        </div>
+        <div class="img-block">
+            <img src="http://ib3.huluim.com/show/8290?size=220x124">
+        </div>
+        <div class="img-block">
+            <img src="http://ib4.huluim.com/show/903?size=220x124">
+        </div>
+    </div>
+    <div class="item">
+        <div class="img-block">
+            <img src="http://ib2.huluim.com/show/7529?size=220x124">
+        </div>
+        <div class="img-block">
+            <img src="http://ib1.huluim.com/show/44?size=220x124">
+        </div>
+        <div class="img-block">
+            <img src="http://ib1.huluim.com/show/7528?size=220x124">
+        </div>
+    </div>
+    <div class="item">
+        <div class="img-block">
+            <img src="http://ib2.huluim.com/show/389?size=220x124">
+        </div>
+        <div class="img-block">
+            <img src="http://ib3.huluim.com/show/11226?size=220x124">
+        </div>
+        <div class="img-block">
+            <img src="http://ib3.huluim.com/show/11430?size=220x124">
+        </div>
+    </div>
+    <div class="item">
+        <div class="img-block">
+            <img src="http://ib4.huluim.com/show/1603?size=220x124">
+        </div>
+        <div class="img-block">
+            <img src="http://ib2.huluim.com/show/53?size=220x124">
+        </div>
+        <div class="img-block">
+            <img src="http://ib1.huluim.com/show/11248?size=220x124">
+        </div>
+    </div>
+    <div class="item">
+        <div class="img-block">
+            <img src="http://ib2.huluim.com/show/2553?size=220x124">
+        </div>
+        <div class="img-block">
+            <img src="http://ib4.huluim.com/show/7555?size=220x124">
+        </div>
+        <div class="img-block">
+            <img src="http://ib4.huluim.com/show/11431?size=220x124">
+        </div>
+    </div>
+    <div class="item">
+        <div class="img-block">
+            <img src="http://ib2.huluim.com/show/11253?size=220x124">
+        </div>
+        <div class="img-block">
+            <img src="http://ib4.huluim.com/show/6979?size=220x124">
+        </div>
+        <div class="img-block">
+            <img src="http://ib3.huluim.com/show/10?size=220x124">
+        </div>
+    </div>*@
+                    </div>
+
+
+
         </div>
 
         <div class="bullet-pagination"></div>
